telescopic hack fix, and a real fix for the code one-liner clipboard scrollbar

--- a/quartz/components/styles/clipboard.scss
+++ b/quartz/components/styles/clipboard.scss
@@ -3,7 +3,7 @@
   display: flex;
   float: right;
   right: 0;
-  padding: 0.2rem; // changed from .4 to stop the weird scrollbar on 1-line code
+  padding: 0.4rem;
   margin: 0.3rem; 
   color: var(--gray);
   border-color: var(--dark);
